Úprava webového obsahu + menší fixy v hlavní šabloně.

--- a/index.html
+++ b/index.html
@@ -54,24 +54,22 @@
                 <div class="zerogrid" style="width: 100%;" id="about">
                     <div class="row wrap-box">
                         <h3>O nás</h3>
+
                         <img src="images/story.jpg" alt="Historie Four Hands">
+
                         <p>Členky klavírního dua Fourhands započaly spolupráci na podzim roku 2021 při přípravě
                             adventního koncertu. Jejich první společnou skladbou byla svita z baletu Louskáček a
                             následně přišla myšlenka program rozšířit o další baletní hudbu tak, aby koncerty
-                            s názvem
-                            Pohádkové balety byly tématické. Společně absolvovaly již řadu koncertů a svůj repertoár
-                            mimo čtyřručních standartů rády
-                            rozšiřují o další hudební žánry.
+                            s názvem Pohádkové balety byly tématické. Společně absolvovaly již řadu koncertů a svůj repertoár
+                            mimo čtyřručních standartů rády rozšiřují o další hudební žánry.
                         </p>
 
                         <p>V současné době pořádají koncerty zaměřené především na díla předních českých mistrů
                             jako například Dvořákovy Slovanské tance, celý Smetanův cyklus Má vlast, dále pak
-                            jazzové
-                            skladby soudobých českých autorů, úpravy orchestrálních a symfonických děl a filmovou
+                            jazzové skladby soudobých českých autorů, úpravy orchestrálních a symfonických děl a filmovou
                             hudbu. Pořádají také výchovné koncerty pro školy. Kromě čtyřruční hry zařazují do
                             repertoáru i skladby pro dva klavíry. V rámci koncertů a projektů spolupracují mj.
-                            s uměleckou agenturou Globarts, skladatelem
-                            Zdeňkem Králem.
+                            s uměleckou agenturou Globarts a Fidelio, skladatelem Zdeňkem Králem.
                         </p>
                     </div>
                 </div>
@@ -89,56 +87,50 @@
                         <div class="wrap-col item">
                             <div class="item-content">
                                 <span>Nejbližší akce:</span>
-                                <p>14/9/2025 - Tábor - Divadlo Oskara Nedbala - B. Smetana - Má Vlast, v 19h</p>
-                                <p>23/9/2025 - Frenštát pod Radhoštěm - Dům Kultury, v 19h (Spolupráce s uměleckou
-                                    agenturou GLOBART)</p>
-                                <p>17/2/2026 - Kolín</p>
+
+                                <p>14.9.2025 - Tábor - Divadlo Oskara Nedbala - B. Smetana - Má Vlast, v 19 h.</p>
+                                <p>23.9.2025 - Frenštát pod Radhoštěm - Dům Kultury, v 19h. (spolupráce s uměleckou agenturou GLOBART).</p>
+                                <p>17.1.2026 - Knihovna Velké Popovice - Novoroční koncert, v 18 h.</p>
+                                <p>10.2.2026 -  Bystřice nad Pernštejnem - kulturní dům, v 19 h.</p>
+                                <p>17.2.2026 - Kolín - Městský společenský dům, v 19 h.</p>
+                                <p>1.10.2026 -  Opava.</p>
+                                <p>12.11.2026 -  Barokní sál Emauzského kláštera - Galakoncert, v 18:30 h. (spolupráce s uměleckou agenturou Fidelio).</p>
                             </div>
                         </div>
 
                         <div class="wrap-col item">
                             <div class="item-content">
                                 <span>Proběhlé akce:</span>
-                                <p>26/7/2025 - Vysoká u Příbramě - Památník A. Dvořáka - Komponovaný pořad "Tanec v
-                                    barvě národní".</p>
-                                <p>2/4/2025 - Velké Meziříčí - Jupiter Club, v 19h. (Spolupráce s uměleckou
-                                    agenturou Globart)</p>
-                                <p>21/3/2025 - Rájec - Jestřebí - Kulturní centrum, v 19h. (Spolupráce s uměleckou
-                                    agenturou Globart)</p>
-                                <p>2/3/2025 - Muzeum Bedřicha Smetany v Praze, v 18h.</p>
-                                <p>4/2/2025 - Přerov - Městský dům, v 19 h. (Spolupráce s uměleckou agenturou
-                                    Globart)</p>
-                                <p>18/1/2025 - Velké Popovice, Knihovna, v 18h.</p>
-                                <p>23/1/2025 - Ostrov, Stará radnice, v 17 h.</p>
-                                <p>3/12/2024 - Adventní koncert Libeňský zámeček, v 19h.</p>
-                                <p>14/11/2024 - Výchovné koncerty Knihovna Velké Popovice.</p>
-                                <p>11/10/2024 - Říčany Babice - Koncert filmové hudby, v 19h. v Kulturním domě.</p>
-                                <p>8/6/2024 - Liberec - Palác Liebieg, koncert filmové hudby na letní scéně, v
-                                    14h.</p>
-                                <p>16/5/2024 - Praha Chodovská tvrz, v 19h.</p>
-                                <p>4/4/2024 - Praha, ZUŠ Jižní město.</p>
-                                <p>2/3/2024 - Památník A. Dvořáka - Má Vlast - koncert k 200letému výročí
-                                    narození B. Smetany</p>
-                                <p>7/3/2024 - Brno Bystrc, v 19h. (Spolupráce s uměleckou agenturou GLOBART)
-                                </p>
-                                <p>22/2/2024 - Třebíč, v 19h. (Spolupráce s uměleckou agenturou GLOBART)</p>
-                                <p>15/2/2024 - Vyškov, v 19h. (Spolupráce s uměleckou agenturou GLOBART)</p>
-                                <p>20/1/2024 - Knihovna V. Popovice, v 19h. Novoroční koncert: Slavné klasické
-                                    a filmové
-                                    melodie</p>
-                                <p>7/12/2023 - Výchovné koncerty knihovna V. Popovice</p>
-                                <p>8/11/2023 - Říčany Babice - KD</p>
-                                <p>1/11/2023 - Kostel sv. Vavřince pod Petřínem - B. Smetana “Má vlast”.</p>
-                                <p>28/4/2023 - Chodovská tvrz “Tance v Proměnách”.</p>
-                                <p>27/4/2023 - Vzorná knihovna Velké Popovice - Výchovné koncerty “Pohádkové
-                                    balety”.</p>
-                                <p>7/1/2023 - “Tance v hudbě s projekci” Atrium na Žižkově.</p>
-                                <p>12/2022 - Vzorná lidová knihovna Velké Popovice.</p>
-                                <p>12/2022 - Výchovné koncerty - P. I. Čajkovskij -Louskáček.</p>
-                                <p>6/2022 - Ostravská univerzita/fakulta umění - Katedra klávesových nástrojů
-                                    “S tancem kolem světa“.</p>
-                                <p>5/2022 - Atrium na Žižkově.</p>
-                                <p>3/2022 - ZUŠ Jižní město.</p>
+
+                                <p>26.7.2025 - Vysoká u Příbramě - Památník A. Dvořáka - Komponovaný pořad "Tanec v barvě árodní".</p>
+                                <p>2.4.2025 - Velké Meziříčí - Jupiter Club, v 19 h. (spolupráce s uměleckou agenturou Globart).</p>
+                                <p>21.3.2025 - Rájec - Jestřebí - Kulturní centrum, v 19 h. (spolupráce s uměleckou agenturou Globart).</p>
+                                <p>2.3.2025 - Muzeum Bedřicha Smetany v Praze, v 18 h.</p>
+                                <p>4.2.2025 - Přerov - Městský dům, v 19 h. (spolupráce s uměleckou agenturou Globart).</p>
+                                <p>18.1.2025 - Velké Popovice, Knihovna, v 18 h.</p>
+                                <p>23.1.2025 - Ostrov, Stará radnice, v 17 h.</p>
+                                <p>3.12.2024 - Adventní koncert Libeňský zámeček, v 19 h.</p>
+                                <p>14.11.2024 - Výchovné koncerty Knihovna Velké Popovice.</p>
+                                <p>11.10.2024 - Říčany Babice - Koncert filmové hudby, v 19 h. v Kulturním domě.</p>
+                                <p>8.6.2024 - Liberec - Palác Liebieg, koncert filmové hudby na letní scéně, v 14 h.</p>
+                                <p>16.5.2024 - Praha Chodovská tvrz, v 19 h.</p>
+                                <p>4.4.2024 - Praha, ZUŠ Jižní město.</p>
+                                <p>2.3.2024 - Památník A. Dvořáka - Má Vlast - koncert k 200letému výročí narození B. Smetany.</p>
+                                <p>7.3.2024 - Brno Bystrc, v 19h. (spolupráce s uměleckou agenturou GLOBART).</p>
+                                <p>22.2.2024 - Třebíč, v 19h. (spolupráce s uměleckou agenturou GLOBART).</p>
+                                <p>15.2.2024 - Vyškov, v 19h. (spolupráce s uměleckou agenturou GLOBART).</p>
+                                <p>20.1.2024 - Knihovna V. Popovice, v 19h. Novoroční koncert: Slavné klasické a filmové melodie.</p>
+                                <p>7.12.2023 - Výchovné koncerty knihovna V. Popovice.</p>
+                                <p>8.11.2023 - Říčany Babice - KD.</p>
+                                <p>1.11.2023 - Kostel sv. Vavřince pod Petřínem - B. Smetana “Má vlast”.</p>
+                                <p>28.4.2023 - Chodovská tvrz “Tance v Proměnách”.</p>
+                                <p>27.4.2023 - Vzorná knihovna Velké Popovice - Výchovné koncerty “Pohádkové balety”.</p>
+                                <p>7.1.2023 - “Tance v hudbě s projekci” Atrium na Žižkově.</p>
+                                <p>12.2022 - Vzorná lidová knihovna Velké Popovice.</p>
+                                <p>12.2022 - Výchovné koncerty - P. I. Čajkovskij -Louskáček.</p>
+                                <p>6.2022 - Ostravská univerzita/fakulta umění - Katedra klávesových nástrojů “S tancem kolem světa“.</p>
+                                <p>5.2022 - Atrium na Žižkově.</p>
+                                <p>3.2022 - Praha, ZUŠ Jižní město.</p>
                             </div>
                         </div>
                     </div>
@@ -151,8 +143,11 @@
                         <div class="col-1-2">
                             <div class="wrap-col">
                                 <h1>Kateřina<br>Konopová</h1>
+
                                 <img src="images/joanna.jpg" alt="foto">
-                                <p>Kateřina Konopová (roz. Turková) je rodačka z Opavy, kde navštěvovala místní
+
+                                <p>
+                                    Kateřina Konopová (roz. Turková) je rodačka z Opavy, kde navštěvovala místní
                                     ZUŠ pod vedením Mgr. Oriany Šenfeldové. Dále absolvovala Janáčkovu
                                     konzervatoř v Ostravě a Institut pro umělecká studia Ostravské univerzity
                                     pod vedením profesorky Marty Toaderové. Poté úspěšně ukončila doktorandské
@@ -169,8 +164,7 @@
                                     pod záštitou Ministerstva zahraničních věcí. Pedagogicky působila na Fakultě
                                     umění Ostravské univerzity a na Janáčkově konzervatoři v Ostravě. V současné
                                     době se věnuje jak koncertní sólové hře, tak i interpretaci komorní hudby a
-                                    je vyhledávanou korepetitorkou. Od roku 2020 vystupuje v klavírním duu spolu
-                                    s Lukášem Michelem a spolupracuje také s pěveckým sborem Pražská Kantiléna.
+                                    je vyhledávanou korepetitorkou. Od roku 2014 spolupracuje s Pražskou Kantilénou.
                                     Nadále se také úspěšně věnuje pedagogické činnosti a působí jako
                                     korepetitorka na konzervatoři Jaroslava Ježka v Praze.
                                 </p>
@@ -180,50 +174,27 @@
                         <div class="col-1-2">
                             <div class="wrap-col">
                                 <h1>Irena<br>Andruško</h1>
+
                                 <img src="images/asher.jpg" alt="foto">
-                                <p>Irena Andruško (roz. Irina Čerkašina) začala studovat hru na klavír v šesti letech ve třídě N.
 
-                                    Avramenko na Střední odborné hudební škole v Charkově. Od počátku se
-
+                                <p>
+                                    Irena Andruško (roz. Irina Čerkašina) začala studovat hru na klavír v šesti letech ve
+                                    třídě N. Avramenko na Střední odborné hudební škole v Charkově. Od počátku se
                                     zúčastňovala mezinárodních soutěží, koncertů a festivalů na Ukrajně i
-
                                     v zahraničí, vystoupila několikrát s orchestrem Charkovské filharmonie. V
-                                    roce
-
-                                    2003 získala Ill. cenu v klavírním duu v soutěži ,Návštěva u Ajvazovského"
-
+                                    roce 2003 získala Ill. cenu v klavírním duu v soutěži ,Návštěva u Ajvazovského"
                                     /Ukrajina/, o rok později získala Il. cenu V Mezinárodní soutěži Virtuosi
-                                    per
-
-                                    musica di pianoforte v Ústí nad Labem. Významnou pro ni byla také ll. cena
-
+                                    per musica di pianoforte v Ústí nad Labem. Významnou pro ni byla také ll. cena
                                     v soutěži j. Poljanského v kategorii komorní soubory /Ukrajina/ v roce 2006
-                                    a ll.
-
-                                    cena V Mezinárodní soutěži Virtuosi per musica di pianoforte v Ústí nad
-                                    Labem
-
-                                    v roce 2009. V letech 2012- 2017 byla studentkou Pražské konzervatoře ve
-                                    třídě
-
-                                    Milana Langera. V roce 20 16 získala IIl. cenu na Mezinárodní soutěži Z.
-                                    Fibicha
-
-                                    v interpretaci melodramů a ll. cenu na XXXIX. Soutěžní přehlídce
-                                    konzervatoří a
-
-                                    hudebních gymnázií ČR. Aktivně se zúčastnila klavírních kurzů pod vedením
-
+                                    a ll. cena V Mezinárodní soutěži Virtuosi per musica di pianoforte v Ústí nad
+                                    Labem v roce 2009. V letech 2012- 2017 byla studentkou Pražské konzervatoře ve
+                                    třídě Milana Langera. V roce 20 16 získala IIl. cenu na Mezinárodní soutěži Z.
+                                    Fibicha v interpretaci melodramů a ll. cenu na XXXIX. Soutěžní přehlídce
+                                    konzervatoří a hudebních gymnázií ČR. Aktivně se zúčastnila klavírních kurzů pod vedením
                                     významných pianistů - prof. Bernd Goetzke (Německo), prof. Milan Langer,
-                                    prof
-
-                                    Michal Rezek, prof. Martin Kasík, Denis Severin (Švýcarsko - komorní hra)
-                                    prof
-
-                                    Marcin Sieniawski (Německo - komorní hra), prof. Viktor Goldberg (Izrael),
-                                    prof
-
-                                    Maria Samson - Primachenko (Rusko - Francie) a dalších.
+                                    prof Michal Rezek, prof. Martin Kasík, Denis Severin (Švýcarsko - komorní hra)
+                                    prof Marcin Sieniawski (Německo - komorní hra), prof. Viktor Goldberg (Izrael),
+                                    prof Maria Samson - Primachenko (Rusko - Francie) a dalších.
                                 </p>
                             </div>
                         </div>
@@ -243,6 +214,7 @@
                         <div class="wrap-col item">
                             <div class="item-content">
                                 <span>Nabízíme tato hudební pásma:</span>
+
                                 <p>B. Smetana - Má vlast</p>
                                 <p>Pocta českým mistrům - díla A. Dvořáka, B. Smetany, Z. Fibicha, K.
                                     Slavického, E. Hradeckého
@@ -391,6 +363,7 @@
                                 <hr class="line">
                             </div>
                         </div>
+
                         <div class="row">
                             <div class="col-1-3">
                                 <div class="wrap-col item">
